force-app/main/default/objects/RecordType_API_Vs_Id_Mapping__c/RecordType_API_Vs_Id_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting stores the record type name vs record type id mapping for ERA objects</description>
    <label>RecordType API vs Id Mapping</label>
</CustomObject>