force-app/main/default/objects/RecordType_API_Vs_Id_Mapping__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Status of Record Type in Salesforce</description>
    <inlineHelpText>Status of Record Type in Salesforce</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>