force-app/main/default/objects/RecordType_API_Vs_Id_Mapping__c/fields/SFDC_Object_API__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Object_API__c</fullName>
    <description>Object API Name in Salesforce</description>
    <inlineHelpText>Object API Name in Salesforce</inlineHelpText>
    <label>SFDC Object API</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>