force-app/main/default/objects/RecordType_API_Vs_Id_Mapping__c/fields/SFDC_Record_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Record_Type_API_Name__c</fullName>
    <description>Record Type API name in Salesforce</description>
    <inlineHelpText>Record Type API name in Salesforce</inlineHelpText>
    <label>SFDC Record Type API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>