force-app/main/default/objects/RecordType_API_Vs_Id_Mapping__c/fields/SFDC_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Record_Type_Id__c</fullName>
    <description>Salesforce record type Id</description>
    <inlineHelpText>Salesforce record type Id</inlineHelpText>
    <label>SFDC Record Type Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>