force-app/main/default/objects/RecordType_API_Vs_Id_Mapping__c/fields/Symplectic_Record_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Symplectic_Record_Type_Code__c</fullName>
    <description>Symplectic record type code</description>
    <inlineHelpText>Symplectic record type code</inlineHelpText>
    <label>Symplectic Record Type Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>