force-app/main/default/objects/RecordType_API_Vs_Id_Mapping__c/listViews/All_Columns.listView-meta.xml
<ListView>
    <fullName>All_Columns</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>SFDC_Object_API__c</columns>
    <columns>SFDC_Record_Type_API_Name__c</columns>
    <columns>SFDC_Record_Type_Id__c</columns>
    <columns>Symplectic_Record_Type_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Columns</label>
</ListView>